--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -18,13 +18,11 @@ jobs:
         with:
           python-version: "3.11"
 
-      - name: Upgrade pip
-        run: python -m pip install --upgrade pip
-
       - - name: Install dependencies
   run: |
     python -m pip install --upgrade pip
-    if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    pip install -r requirements.txt
+
 
       - name: Run TikTok Scheduler
         env:
