Add/update requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-requests
-pandas
+- name: Install dependencies
+  working-directory: ${{ github.workspace }}   # ensures we are in repo root
+  run: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+
